@@ -108,7 +108,7 @@ idle = 30
 socktimeout = 20.0
 
 ; Time interval in seconds before refreshing proxy info. Valid int, default: 60
-;   Proxy info reloaded from manual proxy info defined in Internet Options
+;   Proxy info reloaded from Internet Options or --pac URL
 proxyreload = 60
 
 ; Run in foreground when compiled or run with pythonw.exe. 0 or 1, default: 0
