@@ -23,59 +23,62 @@ def dprint(_):
 class Pac:
     "Load and run PAC files using quickjs"
 
-    _ctxt = None
     _lock = None
 
-    def __init__(self, debug_print=None):
-        "Initialize a quickjs context with default PAC utility functions"
+    pac_location = None
+    pac_encoding = None
+    pac_find_proxy_for_url = None
+
+    def __init__(self, pac_location, pac_encoding="utf-8", debug_print=None):
+        "Initialize PAC requirements"
         global dprint
         if debug_print is not None:
             dprint = debug_print
 
-        self._ctxt = quickjs.Context()
         self._lock = threading.Lock()
 
-        dprint("Loading PAC utils")
-
-        # Load Python callables
-        for func in [self.alert, self.dnsResolve, self.myIpAddress]:
-            self._ctxt.add_callable(func.__name__, func)
-
-        # Load PAC js utils
-        self._ctxt.eval(PACUTILS)
+        self.pac_location = pac_location
+        self.pac_encoding = pac_encoding
 
     def __del__(self):
-        "Release quickjs context"
+        "Release quickjs resources"
         if self._lock is not None:
-            if self._ctxt is not None:
+            if self.pac_find_proxy_for_url is not None:
                 with self._lock:
-                    self._ctxt = None
+                    self.pac_find_proxy_for_url = None
             self._lock = None
 
-    def load(self, pac_data, pac_encoding):
-        "Load PAC data in specified encoding into this context"
-        pac_encoding = pac_encoding or "utf-8"
+    def _load(self, pac_data):
+        "Load PAC data in a quickjs Function"
         try:
-            text = pac_data.decode(pac_encoding)
+            text = pac_data.decode(self.pac_encoding)
         except UnicodeDecodeError as exc:
-            dprint(f"PAC file not encoded in {pac_encoding}")
+            dprint(f"PAC file not encoded in {self.pac_encoding}")
             dprint("Use --pac_encoding or proxy:pac_encoding in px.ini to change")
             return
 
         try:
-            with self._lock:
-                self._ctxt.eval(text)
+            self.pac_find_proxy_for_url = quickjs.Function(
+                "FindProxyForURL", PACUTILS + "\n\n" + text
+            )
+
+            # Load Python callables
+            for func in [self.alert, self.dnsResolve, self.myIpAddress]:
+                self.pac_find_proxy_for_url.add_callable(func.__name__, func)
         except quickjs.JSException as exc:
             dprint("PAC file parsing error")
             return
 
-    def load_jsfile(self, jsfile, pac_encoding):
-        "Load specified JS file into this context"
+        dprint("Loaded PAC script")
+
+    def _load_jsfile(self, jsfile):
+        "Load specified PAC file"
         dprint(f"Loading PAC file: {jsfile}")
         with open(jsfile, "rb") as js:
-            self.load(js.read(), pac_encoding)
+            self._load(js.read())
 
-    def load_url(self, jsurl, pac_encoding):
+    def _load_url(self, jsurl):
+        "Load specfied PAC URL"
         dprint(f"Loading PAC url: {jsurl}")
         c = mcurl.Curl(jsurl)
         c.set_debug()
@@ -85,11 +88,21 @@ class Pac:
         if ret == 0:
             ret, resp = c.get_response()
             if ret == 0 and resp < 400:
-                self.load(c.get_data(None), pac_encoding)
+                self._load(c.get_data(None))
             else:
                 dprint(f"Failed to access PAC url: {jsurl}: {ret}, {resp}")
         else:
             dprint(f"Failed to load PAC url: {jsurl}: {ret}, {c.errstr}")
+
+    def _load_pac(self):
+        "Load PAC as configured once across all threads"
+        if self.pac_find_proxy_for_url is None:
+            with self._lock:
+                if self.pac_find_proxy_for_url is None:
+                    if self.pac_location.startswith("http"):
+                        self._load_url(self.pac_location)
+                    else:
+                        self._load_jsfile(self.pac_location)
 
     def find_proxy_for_url(self, url, host):
         """
@@ -99,14 +112,14 @@ class Pac:
         """
         dprint(f"Finding proxy for {url}")
         proxies = "DIRECT"
-        with self._lock:
-            try:
-                proxies = self._ctxt.eval("FindProxyForURL")(url, host)
-            except quickjs.JSException as exc:
-                # Return DIRECT - cannot crash Px due to PAC file issues
-                # which could happen in reload_proxy()
-                dprint(f"FindProxyForURL failed, issues loading PAC file: {exc}")
-                dprint("Assuming DIRECT connection as fallback")
+        self._load_pac()
+        try:
+            proxies = self.pac_find_proxy_for_url(url, host)
+        except quickjs.JSException as exc:
+            # Return DIRECT - cannot crash Px due to PAC file issues
+            # which could happen in reload_proxy()
+            dprint(f"FindProxyForURL failed, issues loading PAC file: {exc}")
+            dprint("Assuming DIRECT connection as fallback")
 
         # Fix #160 - convert PAC return values into CURLOPT_PROXY schemes
         for ptype in ["PROXY", "HTTP"]:
